2010-10-31  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars: add new define for compilation with OpenMP

	* src/devolMP.cpp: New OpenMP-using variants -- with issues as we
	cannot simple multithread around the single-threaded R instance
	* src/permuteMP.cpp: New OpenMP-using variant -- without actual
	speedup as the task in the permutation loop is so simple that the
	multithreading overhead eats any parallelisation gains

	* src/devol.cpp: Added #ifdef to disable if OpenMP is used
	* src/permute.cpp: Added #ifdef to disable if OpenMP is used

	* openmp.r: Added test script for OpenMP usage

2010-10-30  Dirk Eddelbuettel  <edd@debian.org>

	* src/deoptim.cpp: Renamed from de4_0.cpp; function renamed DEoptim
	* R/DEoptim.R: Call renamed function "DEoptim"

	* src/devol.cpp: Split function devol() off into its own file
	* src/permute.cpp: Split function devol() off into its own file

	* profile.r: Simple front-end script used for profiling runs

	* src/evaluate.cpp: Slight performance increase and simplification

	* benchmark.txt: Updated benchmark results, including one on OS X

2010-10-30  Dirk Eddelbuettel  <edd@debian.org>

	* benchmark.r: Now calls demo/benchmark.r, minor edits
	* bigBenchmark.r: Now calls demo/bigBenchmark.r, minor edits

2010-10-27  Dirk Eddelbuettel  <edd@debian.org>

	* benchmark.txt: Updated benchmark results, including one on OS X
	* src/de4_0.cpp: Minor edits

2010-10-26  Dirk Eddelbuettel  <edd@debian.org>

	* src/de4_0.cpp:
	  - corrected sortindex error for strat=6
	  - corrected inner loop when bs=TRUE

	* DESCRIPTION: explicit Depends: on RcppArmadillo (>= 0.2.8)
	
2010-10-19  Dirk Eddelbuettel  <edd@debian.org>

	* R/DEoptim.R:
	  - reduce storepop list by one to match DEoptim behaviour
	  - set row and column names

	* src/de4_0.cpp:
	  - Removed a few more unused variables
	  - moved some variable declaration down to where they are use
	  - turned one do-while into for(;;) loop
	  - replaced macros with proper try/catch block