@@ -47,8 +47,8 @@ DEoptim.control <- function(VTR = -Inf, strategy = 2, bs = FALSE, NP = 50,
        checkWinner = checkWinner, avWinner = avWinner, p = p)
 }
 
-DEoptim <- function(fn, lower, upper, control = DEoptim.control(), ...) {
-  fn1  <- function(par) fn(par, ...)
+DEoptim <- function(fn, lower, upper, control = DEoptim.control(), env, ...) {
+  ##fn1  <- function(par) fn(par, ...)
   if (length(lower) != length(upper))
     stop("'lower' and 'upper' are not of same length")
   if (!is.vector(lower))
@@ -71,6 +71,8 @@ DEoptim <- function(fn, lower, upper, control = DEoptim.control(), ...) {
     nam <- names(upper)
   else
     nam <- paste("par", 1:length(lower), sep = "")
+  if (missing(env))
+    env <- new.env()
 
   ctrl <- do.call(DEoptim.control, as.list(control))
   ctrl$npar <- length(lower)
@@ -93,7 +95,7 @@ DEoptim <- function(fn, lower, upper, control = DEoptim.control(), ...) {
   ctrl$trace <- as.numeric(ctrl$trace)
   ctrl$specinitialpop <- as.numeric(ctrl$specinitialpop)
 
-  outC <- .Call("DEoptim", lower, upper, fn1, ctrl, new.env(), PACKAGE = "RcppDE")
+  outC <- .Call("DEoptim", lower, upper, fn, ctrl, env, PACKAGE = "RcppDE")
   ##
   if (length(outC$storepop) > 0) {
     nstorepop <- floor((outC$iter - ctrl$storepopfrom) / ctrl$storepopfreq)
