@@ -1,3 +1,8 @@
+2010-11-04  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/DEoptim.R: Make 'env' an optional argument, don't redefine fn()
+	* man/DEoptim.Rd: Document 'env' argument
+
 2010-10-31  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/Makevars: add new define for compilation with OpenMP
